--- a/03-gsap/index.html
+++ b/03-gsap/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="page1"></div>
+
+    <div id="page2">
+      <h1>Experiences</h1>
+    </div>
+
+    <div id="page3">
+      <h1></h1>
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
