--- a/04-gsap/index.html
+++ b/04-gsap/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="string">
+      <svg width="1000" height="200">
+        <path
+          d="M 10 100 Q 500 100 990 100"
+          stroke="white"
+          fill="transparent"
+        />
+      </svg>
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
